[project]
name = "sip-data-classification"
version = "0.1.0"
description = ""
authors = [
    {name = "Kirill Popov, Anna Sedova"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dash (>=3.0.4,<4.0.0)",
    "dash-bootstrap-components (>=2.0.3,<3.0.0)",
    "plotly (>=6.1.2,<7.0.0)",
    "datetime (>=5.5,<6.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "pathlib (>=1.0.1,<2.0.0)",
    "shapely (>=2.1.1,<3.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "coordinates @ git+https://github.com/gnss-lab/coordinates.git",
    "s2geometry (>=0.9.0,<0.10.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "h5py (>=3.14.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
